# light-pass

./: .gitignore  LICENSE  README.md  biome.json  flowbite-plugin.js  index.html  lefthook.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: lint_rs.yml  release.yml
public/builder/: builder.js  fs.js  image.js  index.html  read.js  save.js
public/editor/: editor.js  index.html
src/: App.tsx  App_.tsx  animation.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial.sql
src-tauri/src/: builder.rs  crud.rs  database.rs  editor.rs  error.rs  github.rs  main.rs  state.rs
src-tauri/src/crud/: answer.rs  correction.rs  deployment_process.rs  locale.rs  page_result.rs  quiz.rs  responder.rs
src-tauri/src/trace/: error.rs
src-tauri/src/utils/: time.rs
src-tauri/template/.github/workflows/: nextjs.yml
src-tauri/template/data/: quiz.json  quiz.schema.json
src-tauri/template/messages/: en.json  uk.json
src/api/: answers.ts  builder.ts  configuration.ts  corrections.ts  deploymentProcess.ts  github.ts  locales.ts  pageResult.ts  pages.ts  quizzes.ts  responders.ts
src/constants/: block.ts  configuration.ts  connection.ts  deployment.ts  languages.ts  locales.ts  marks.ts  message.ts  quizzes.ts
src/helpers/: abortable.ts  compareResponders.ts  createSelectors.ts  debounce.ts  detectPlatform.ts  getDuration.ts  getLocaleLang.ts  getValue.ts  onCloseRequested.ts  peer.ts  platformToText.ts  requestNotificationPermission.ts  runStage.ts  sendNotification.ts  setValue.ts  toBase64.ts
src/hooks/: useClientListener.legacy.tsx  useClientListener.tsx  useConnection.tsx  useDeployment.tsx  useResponderStore.tsx  useRevalidateOnMessage.tsx  useServerListener.tsx
src/lib/: github.ts
src/models/: Answer.ts  Correction.ts  DeploymentProcess.ts  Locale.ts  PageResult.ts  Quiz.ts  QuizConfiguration.ts  Responder.ts
(+163 files in other folders)
