[package]
name = "quiz-gui"
version = "0.0.0"
description = "A Quiz App"
authors = ["Bohdan Andrianov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri = { version = "1", features = [ "dialog-all", "window-close", "os-all", "window-unmaximize", "clipboard-all", "window-maximize", "notification-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
