[package]
name = "light-pass"
version = "0.0.1"
description = "Build your own quiz website"
authors = ["Bohdan Andrianov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1.0"
keyring = "2"
thiserror = "1.0"
refinery = { version = "0.8", features = ["rusqlite"] }
reqwest = { version = "0.12.4", features = ["json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "fs-all", "path-all", "dialog-all", "window-close", "os-all", "window-unmaximize", "clipboard-all", "window-maximize", "notification-all", "shell-open"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
